--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,9 +26,12 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
-      <li class="sidebar-nav-item">Currently v{{ site.version }}</li>
+      <li class="sidebar-nav-item"><a href="https://github.com/garciparedes" target="_blank">GitHub</a></li>
+      <li class="sidebar-nav-item"><a href="https://twitter.com/garciparedes" target="_blank">Twitter</a></li>
+      <li class="sidebar-nav-item"><a href="https://instagram.com/garciparedes" target="_blank">Instagram</a></li>
+      <li class="sidebar-nav-item"><a href="https://facebook.com/garciparedes" target="_blank">Facebook</a></li>
+      <li class="sidebar-nav-item"><a href="https://www.linkedin.com/in/garciparedes" target="_blank">LinkedIn</a></li>
+
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
