--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>{{ site.title }}</h1>
+      <h2>{{ site.title }}</h2>
       <p class="lead">{{ site.description }}</p>
     </div>
 
@@ -26,9 +26,12 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
-      <li class="sidebar-nav-item">Currently v{{ site.version }}</li>
+
+      <p>GitHub: <a href="https://github.com/garciparedes" target="_blank">github.com/garciparedes</a> </p>
+      <p>Twitter: <a href="https://twitter.com/garciparedes" target="_blank">twitter.com/garciparedes</a> </p>
+      <p>Intagram: <a href="https://instagram.com/garciparedes" target="_blank">instagram.com/garciparedes</a> </p>
+      <p>Facebook: <a href="https://facebook.com/garciparedes" target="_blank">facebook.com/garciparedes</a> </p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/garciparedes" target="_blank">linkedin.com/in/garciparedes</a> </p>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
