--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h2><font color="white">{{ site.title }}</font></h2>
+      <h1>{{ site.title }}</h1>
       <p class="lead">{{ site.description }}</p>
     </div>
 
