--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -303,7 +303,7 @@ tbody tr:nth-child(odd) th {
 .page,
 .post {
   margin-bottom: 4em;
-  text-align: center;
+  vertical-align: middle;
 }
 
 /* Blog post or page title */
