--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
   {% include head.html %}
+
+  {% include google_analytics.html %}
 
   <body>
 
     {% include sidebar.html %}
 
     <div class="content container">
+
       {{ content }}
+
+      {% include comments.html %}
+
     </div>
 
   </body>
