--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-32504770-1', 'tumblr.com');
+  ga('create', 'UA-32504770-2', 'garciparedes.github.io');
   ga('send', 'pageview');
 
 </script>
