--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -5,6 +5,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-32504770-2', 'garciparedes.github.io');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
 </script>
