--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,18 @@
 
     <div class="content container">
 
+      <div class="container content">
+      <div class="masthead">
+        <h3 class="masthead-title">
+          <a href="/" title="Home">{{ site.title }}</a>
+
+          {% for page_name in site.pages_list %}
+              &nbsp;&nbsp;&nbsp;<small><a href="/{{ page_name | downcase }}">{{ page_name }}</a></small>
+          {% endfor %}
+
+        </h3>
+      </div>
+
       {{ content }}
 
     </div>
