--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -261,10 +261,8 @@ tbody tr:nth-child(odd) th {
   max-width: 38rem;
   padding-left:  1rem;
   padding-right: 1rem;
-/*
   margin-left:  auto;
   margin-right: auto;
-*/
 }
 
 
@@ -274,7 +272,7 @@ tbody tr:nth-child(odd) th {
  * Super small header above the content for site name and short description.
  */
 
-.masthead {
+/*.masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
@@ -293,7 +291,7 @@ tbody tr:nth-child(odd) th {
   color: #c0c0c0;
   letter-spacing: 0;
 }
-
+*/
 
 /*
  * Posts and pages
