--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -272,7 +272,7 @@ tbody tr:nth-child(odd) th {
  * Super small header above the content for site name and short description.
  */
 
-/*.masthead {
+.masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
@@ -291,7 +291,7 @@ tbody tr:nth-child(odd) th {
   color: #c0c0c0;
   letter-spacing: 0;
 }
-*/
+
 
 /*
  * Posts and pages
