--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
       <div class="container content">
       <div class="masthead">
         <h3 class="masthead-title">
+          <a href="/" title="Home">Home</a>
 
           {% for page_name in site.pages_list %}
               &nbsp;&nbsp;&nbsp;<small><a href="/{{ page_name | downcase }}">{{ page_name }}</a></small>
