--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,40 @@
   <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
 
 
+  <script type='text/javascript'>
+  //<![CDATA[ 
+
+    $(function() {
+         
+    // get initial top offset of navigation 
+    var floating_navigation_offset_top = $('#masthead-title').offset().top;
+             
+    // define the floating navigation function
+    var floating_navigation = function(){
+                // current vertical position from the top
+        var scroll_top = $(window).scrollTop(); 
+         
+        // if scrolled more than the navigation, change its 
+                // position to fixed to float to top, otherwise change 
+                // it back to relative
+        if (scroll_top > floating_navigation_offset_top) { 
+            $('#masthead-title').css({ 'position': 'fixed', 'top':0});
+        } else {
+            $('#masthead-title').css({ 'position': 'relative' }); 
+        }   
+    };
+     
+    // run function on load
+    floating_navigation();
+     
+    // run function every time you scroll
+    $(window).scroll(function() {
+         floating_navigation();
+    });
+ 
+});
+
+
+
+
 </head>
