--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -281,6 +281,7 @@ tbody tr:nth-child(odd) th {
   margin-top: 0;
   margin-bottom: 0;
   color: #505050;
+  position: relative;
 }
 .masthead-title a {
   color: #505050;
