--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -311,7 +311,8 @@ tbody tr:nth-child(odd) th {
 
 .page,
 .post {
-  margin-bottom: 7em;
+  margin-top: 4em;
+  margin-bottom: 4em;
 }
 
 /* Blog post or page title */
