--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -263,6 +263,7 @@ tbody tr:nth-child(odd) th {
   padding-right: 1rem;
   margin-left:  auto;
   margin-right: auto;
+  text-align: center;
 }
 
 
@@ -315,6 +316,7 @@ tbody tr:nth-child(odd) th {
 .post {
   margin-top: 4em;
   margin-bottom: 4em;
+  text-align: left;
 }
 
 /* Blog post or page title */
