--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,19 +8,13 @@
 
     {% include sidebar.html %}
 
+    {% include navibar.html %}
+
+
     <div class="content container">
 
       <div class="container content">
-      <div class="masthead">
-        <h3 class="masthead-title">
-          <a href="/">Home</a>
-
-          {% for page_name in site.pages_list %}
-              &nbsp;&nbsp;&nbsp;<small><a href="/{{ page_name | downcase }}">{{ page_name }}</a></small>
-          {% endfor %}
-
-        </h3>
-      </div>
+      
 
       {{ content }}
 
