--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -120,10 +120,13 @@ a.sidebar-nav-item:focus {
  * Align the contents of the site above the proper threshold with some margin-fu
  * with a 25%-wide `.sidebar`.
  */
-/*
+
 .content {
-  padding-top:    4rem;
-  padding-bottom: 4rem;
+  max-width: 38rem;
+  padding-left:  1rem;
+  padding-right: 1rem;
+  margin-left:  auto;
+  margin-right: auto;
 }
 
 @media (min-width: 48rem) {
@@ -140,7 +143,7 @@ a.sidebar-nav-item:focus {
     margin-right: 4rem;
   }
 }
-*/
+
 
 /*
  * Reverse layout
