--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {% include navibar.html %}
 
 
-    <div class="content container">
+    <div class="content-container">
 
       <div class="container content">
       
