--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -125,9 +125,8 @@ a.sidebar-nav-item:focus {
   max-width: 38rem;
   padding-left:  1rem;
   padding-right: 1rem;
-  margin-left:  auto;
+  margin-left:  18rem;
   margin-right: auto;
-  left: 18rem;
 
 }
 
