--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -131,7 +131,7 @@ a.sidebar-nav-item:focus {
   left: 18rem;
 
 }
-.content-container {
+.container-content {
   position: relative;
   margin-left:  auto;
   margin-right: auto;
