--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <div class="content-container">
 
-      <div class="container-content">
+      <div class="container content">
       
 
       {{ content }}
