--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -122,14 +122,17 @@ a.sidebar-nav-item:focus {
  */
 
 .content-container {
+
   max-width: 38rem;
   padding-left:  1rem;
   padding-right: 1rem;
   margin-left:  auto;
   margin-right: auto;
-
+  position: relative;
+  left: 18rem;
 
 }
+
 
 /*
 
