--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,19 @@
 
     {% include sidebar.html %}
 
-    {% include navibar.html %}
+    <div class="content container">
 
+      <div class="container content">
+      <div class="masthead">
+        <h3 class="masthead-title">
+          <a href="/">Home</a>
 
-    <div class="content-container">
+          {% for page_name in site.pages_list %}
+              &nbsp;&nbsp;&nbsp;<small><a href="/{{ page_name | downcase }}">{{ page_name }}</a></small>
+          {% endfor %}
 
-      <div class="container-content">
-      
+        </h3>
+      </div>
 
       {{ content }}
 
