--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -120,19 +120,11 @@ a.sidebar-nav-item:focus {
  * Align the contents of the site above the proper threshold with some margin-fu
  * with a 25%-wide `.sidebar`.
  */
-
-.content-container {
-
-  padding-left:  25rem;
-  padding-right: 7rem;
-  margin-left:  auto;
-  margin-right: auto;
-
-
-}
-
-
 /*
+.content {
+  padding-top:    4rem;
+  padding-bottom: 4rem;
+}
 
 @media (min-width: 48rem) {
   .content {
@@ -148,7 +140,6 @@ a.sidebar-nav-item:focus {
     margin-right: 4rem;
   }
 }
-
 */
 
 /*
