--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -273,18 +273,33 @@ tbody tr:nth-child(odd) th {
  * Super small header above the content for site name and short description.
  */
 
-.masthead {
-  padding-top:    0.5rem;
-  padding-bottom: 0.5rem;
-  position: fixed;
-  background-color: #FFFFFF;
-  top: 0;
-  left: 18rem;
-  right: 0;
-  border-bottom: 1px solid #eee;
+@media (min-width: 48rem) {
+  .masthead {
+    padding-top:    0.5rem;
+    padding-bottom: 0.5rem;
+    position: fixed;
+    background-color: #FFFFFF;
+    top: 0;
+    left: 18rem;
+    right: 0;
+    border-bottom: 1px solid #eee;
 
+  }
+}
 
+@media (max-width: 48rem) {
+  .masthead {
+    padding-top:    0.5rem;
+    padding-bottom: 0.5rem;
+    position: fixed;
+    background-color: #FFFFFF;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 1px solid #eee;
 
+  }
+}
 
 }
 .masthead-title {
