--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
       var $allVideos = $("iframe[src^='http://www.youtube.com']"),
 
           // The element that is fluid width
-          $fluidEl = $("#container");
+          $fluidEl = $("#viewport");
 
       // Figure out and save aspect ratio for each video
       $allVideos.each(function() {
