Add Video Resizable

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,8 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
+
+  <!-- Fitvid.js -->
+  &lt;script src="jquery.fitvids.js"&gt;&lt;/script&gt;
+
 </head>
