Added resizable videos

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,10 @@
 
 
   <!-- Fitvid.js -->
-  &lt;script src="jquery.fitvids.js"&gt;&lt;/script&gt;
+  <script src="path/to/jquery.fitvids.js"></script>
+  <script>
+      $(".container").fitVids();
+  </script>
+
 
 </head>
