Added resizable videos

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,8 +36,8 @@
   <script>
     $(document).ready(function(){
       // Target your .container, .wrapper, .post, etc.
-      $(".post").fitVids();
-      $(".page").fitVids();
+      $("#post").fitVids();
+      $("#page").fitVids();
     });
   </script>
 
