--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
 
   {% include google_analytics.html %}
 
+  {% include resizable_videos_script.html %}
+
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
