--- a/_includes/resizable_videos_script.html
+++ b/_includes/resizable_videos_script.html
@@ -8,7 +8,7 @@ $(function() {
 	var $allVideos = $("iframe[src^='http://www.youtube.com']"),
 
 	    // The element that is fluid width
-	    $fluidEl = $("body");
+	    $fluidEl = $(".containercontent");
 
 	// Figure out and save aspect ratio for each video
 	$allVideos.each(function() {
