--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
 
   {% include google_analytics.html %}
 
+  <!-- JQuery -->
+  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script> 
+  
   {% include resizable_videos_script.html %}
 
   <link href="http://gmpg.org/xfn/11" rel="profile">
@@ -30,18 +33,5 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
-
-
-  <!-- Fitvid.js -->
-  <script src="path/to/jquery.min.js"></script>
-  <script src="path/to/jquery.fitvids.js"></script>
-  <script>
-    $(document).ready(function(){
-      // Target your .container, .wrapper, .post, etc.
-      $("#post").fitVids();
-      $("#page").fitVids();
-    });
-  </script>
-
 
 </head>
