--- a/_includes/resizable_videos_script.html
+++ b/_includes/resizable_videos_script.html
@@ -5,7 +5,7 @@
 $(function() {
 
 	// Find all YouTube videos
-	var $allVideos = $("iframe[src^='http://www.youtube.com']"),
+	var $allVideos = $("iframe[src^='//www.youtube.com']"),
 
 	    // The element that is fluid width
 	    $fluidEl = $(".containercontent");
