--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html>
-	{% include head.html %}
 
-	<body>
-		{% include header.html %}
-		{% include page_content.html %}
-		{% include contact.html %}
-		{% include footer.html %}
-		{% include js.html %}
-	</body>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include sidebar.html %}
+
+    <div class="content container">
+
+      <div class="containercontent">
+      <div class="masthead">
+        <h3 class="masthead-title">
+          <a href="/">Home</a>
+
+          {% for page_name in site.pages_list %}
+              &nbsp;&nbsp;&nbsp;<small><a href="/{{ page_name | downcase }}">{{ page_name }}</a></small>
+          {% endfor %}
+
+        </h3>
+      </div>
+
+      {{ content }}
+
+    </div>
+
+    {% include resizable_videos_script.html %}
+
+
+  </body>
+
 </html>
