Added backToTop button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,10 @@
          <section class="copyright">All content copyright <a href="mailto:{{ site.email}}">{{ site.name }}</a> &copy; 2014 &bull; All rights reserved.</section>
          <section class="poweredby">Made with <a href="http://jekyllrb.com"> Jekyll</a></section>
     </div>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://arrow.scrolltotop.com/arrow13.js"></script>
+
 </footer>
 
 <!-- footer end -->
