Added new post and comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -97,6 +97,7 @@
         <a href="/" class="btn">Back to Overview</a>
       </div>
     </div>
+    {% include comments.html %}
     {% include javascripts.html %}
   </body>
 </html>
