--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,15 +8,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>{{ site.about.description }}</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a target="_blank" href="{{ site.cv-link }}" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download my CV
                     </a>
                 </div>
             </div>
