--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,19 +8,25 @@
                     <hr class="star-primary">
                 </div>
             </div>
+
             <div class="row">
                 {% for post in site.posts %}
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-                        </a>
+                <div class="col-sm-3 portfolio-item">
+                    <div class="square">
+                       <div class="content">
+                           <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                               <div class="caption">
+                                   <div class="caption-content">
+                                       <i class="fa fa-search-plus fa-3x"></i>
+                                   </div>
+                               </div>
+                               <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                           </a>
+                        </div>
                     </div>
+                </div>
                 {% endfor %}
+
             </div>
         </div>
     </section>
