Added skills and interests sections

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,15 @@
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
+
+                    <li class="page-scroll">
+                        <a href="#skills">Skills</a>
+                    </li>
+
+                    <li class="page-scroll">
+                        <a href="#interests">Interests</a>
+                    </li>
+
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
