--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
+    {% include skills.html %}
+    {% include interests.html %}
 
     {% if site.contact == "static" %}
     {% include contact_static.html %}
