--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,4 +1,4 @@
- <!-- About Section -->
+ <!-- Interests Section -->
     <section class="success" id="interests">
         <div class="container">
             <div class="row">
