--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -12,13 +12,11 @@
             <div class="row">
 
                 {% for skill in site.programing-skills %}
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-
-
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
 
                     <div class="inner-content text-center">
 
-                        <div class="c100 p{{skill.percent}} big green center">
+                        <div class="c100 p{{skill.percent}} green center">
                             <span>{{skill.percent}}%</span>
                             <div class="slice">
                                 <div class="bar"></div>
