--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -5,7 +5,7 @@
  */
 
 .inner-content{
-    margin: 0 0 90px 0;
+    margin: 0 0 30px 0;
 }
 
 .portfolio-item .square {
@@ -199,6 +199,10 @@ section h2 {
 section.success {
     color: #fff;
     background: #{{ site.color.primary }};
+}
+
+.panel-body {
+    color: #{{ site.color.secondary }};
 }
 
 @media(max-width:767px) {
