--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -7,28 +7,32 @@
                     <hr class="star-light">
                 </div>
             </div>
+            <div class="panel panel-default">
+              <div class="panel-body">
+                  <div class="row">
 
-            <div class="row">
+                      {% for interest in site.interests %}
+                      <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
 
-                {% for interest in site.interests %}
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                          <div class="inner-content text-center">
 
-                    <div class="inner-content text-center">
+                              <div class="c100 p{{interest.percent}} green center">
+                                  <span>{{interest.percent}}%</span>
+                                  <div class="slice">
+                                      <div class="bar"></div>
+                                      <div class="fill"></div>
+                                  </div>
+                              </div>
 
-                        <div class="c100 p{{interest.percent}} green center">
-                            <span>{{interest.percent}}%</span>
-                            <div class="slice">
-                                <div class="bar"></div>
-                                <div class="fill"></div>
-                            </div>
-                        </div>
+                              <h3>{{interest.name}}</h3>
 
-                        <h3>{{interest.name}}</h3>
+                          </div>
+                      </div>
+                      {% endfor %}
 
-                    </div>
-                </div>
-                {% endfor %}
-
+                  </div>
+              </div>
             </div>
+
         </div>
     </section>
