Added Google Analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 
     {% include footer.html %}
     {% include modals.html %}
+    {% include analytics.html %}
     {% include js.html %}
     </body>
 </html>
