--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -15,6 +15,9 @@
     padding-bottom : 75%; /* = width for a 1:1 aspect ratio */
     margin:0 0 1.66%;
     overflow:hidden;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .portfolio-item .content {
@@ -230,6 +233,7 @@ section.success {
     position: absolute;
     width: 100%;
     height: 100%;
+    padding-bottom: 75%;
     opacity: 0;
     background: rgba({{ site.color.primary-rgb }},.9);
     -webkit-transition: all ease .5s;
