--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,19 +11,16 @@
 
             <div class="row">
                 {% for post in site.posts %}
-                <div class="col-sm-4 portfolio-item">
-                    <div class="square">
-                       <div class="content">
-                           <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                               <div class="caption">
-                                   <div class="caption-content">
-                                       <i class="fa fa-search-plus fa-3x"></i>
-                                   </div>
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                        <div class="square" style="background-image: url(img/portfolio/{{ post.img }});">
+                           <div class="caption">
+                               <div class="caption-content">
+                                   <i class="fa fa-search-plus fa-2x"></i>
                                </div>
-                               <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-                           </a>
+                           </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 {% endfor %}
 
