Added new post and

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
 
             <div class="row">
                 {% for post in site.posts %}
-                <div class="col-sm-3 portfolio-item">
+                <div class="col-xs-6 col-sm-3 portfolio-item">
                     <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="square" style="background-image: url(img/portfolio/{{ post.img }});">
                            <div class="caption">
