--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
 
             <div class="row">
                 {% for post in site.posts %}
-                <div class="col-xs-6 col-md-3 col-sm-2 portfolio-item">
+                <div class="col-xs-6 col-sm-3 col-md-2 portfolio-item">
                     <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="square" style="background-image: url(img/portfolio/{{ post.img }});">
                            <div class="caption">
