--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -102,6 +102,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
+    height: 100vh;
     background: #{{ site.color.primary }};
 }
 
@@ -152,7 +153,7 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+        font-size: 1.7em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -163,7 +164,7 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 }
 
