--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -186,6 +186,10 @@ header .intro-text .skills {
     outline: 0;
 }
 
+.navbar-brand {
+    font-size: 16px;
+}
+
 .navbar-default,
 .navbar-inverse {
     border: 0;
