--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -102,7 +102,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    height: 100vh;
+    min-height: 100vh;
     background: #{{ site.color.primary }};
 }
 
