Added cover image and improved styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
         {% include header.html %}
         {% include portfolio_grid.html %}
         {% include about.html %}
+        {% include skills.html %}
+        <img style="width: 100%;"src="img/cover-paredes.png">
 
         {% if site.contact == "static" %}
             {% include contact_static.html %}
