--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,10 @@
                     </li>
 
                     <li class="page-scroll">
+                        <a href="#skills">Skills</a>
+                    </li>
+
+                    <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
