--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,7 +16,7 @@
 
                     <div class="inner-content text-center">
 
-                        <div class="c100 p{{skill.percent}} green center">
+                        <div class="c100 p{{skill.percent}} grey center">
                             <span>{{skill.percent}}%</span>
                             <div class="slice">
                                 <div class="bar"></div>
