Modified Skills renaming as Languajes and synced with wakatime

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -20,6 +20,9 @@
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/freelancer.js" }}"></script>
 
+    <!-- Languaje List JavaScript -->
+    <script src="{{ "/js/languajes.js" }}"></script>
+
     {% if site.contact == "disqus" %}
     <!-- Disqus Stuff -->
     {% include js_disqus.html %}
