Fixed big grammar typo

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -21,7 +21,7 @@
     <script src="{{ "/js/freelancer.js" }}"></script>
 
     <!-- Languaje List JavaScript -->
-    <script src="{{ "/js/languajes.js" }}"></script>
+    <script src="{{ "/js/languages.js" }}"></script>
 
     {% if site.contact == "disqus" %}
     <!-- Disqus Stuff -->
