--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,7 +29,7 @@
                     </li>
 
                     <li class="page-scroll">
-                        <a href="#languajes">Languajes</a>
+                        <a href="#languages">Languages</a>
                     </li>
 
                     <li class="page-scroll">
