--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         {% include header.html %}
         {% include portfolio_grid.html %}
         {% include about.html %}
-        {% include languajes.html %}
+        {% include languages.html %}
         <img style="width: 100%;"src="img/cover-paredes.png">
 
         {% if site.contact == "static" %}
