--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -1,5 +1,5 @@
 <!-- Skills Section -->
-<section id="languajes">
+<section id="languages">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -7,8 +7,8 @@
           <hr class="star-primary">
       </div>
     </div>
-    <div class="row" id="languajest-list">
-      <!-- Generated from JS: ./js/languajes.js -->
+    <div class="row" id="languagest-list">
+      <!-- Generated from JS: ./js/languages.js -->
     </div>
   </div>
 </section>
