--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,3 +1,4 @@
 {% include css/bootstrap.min.css %}
-{% include css/main.css %}
 {% include css/circle.css %}
+{% include css/main.css %}
+{% include css/about.css %}
