--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -42,7 +42,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #${ site.color.primary };
 }
 
 h1,
@@ -83,15 +83,15 @@ hr.star-light {
 
 hr.star-light:after {
     color: #fff;
-    background-color: #{{ site.color.primary }};
+    background-color: #${ site.color.primary };
 }
 
 hr.star-primary {
-    border-color: #{{ site.color.secondary }};
+    border-color: #${ site.color.secondary };
 }
 
 hr.star-primary:after {
-    color: #{{ site.color.secondary }};
+    color: #${ site.color.secondary };
     background-color: #fff;
 }
 
@@ -107,7 +107,7 @@ header {
     text-align: center;
     color: #fff;
     min-height: 100vh;
-    background: #{{ site.color.primary }};
+    background: #${ site.color.primary };
 }
 
 header .container {
@@ -212,11 +212,11 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #{{ site.color.primary }};
+    background: #${ site.color.primary };
 }
 
 .panel-body {
-    color: #{{ site.color.secondary }};
+    color: #${ site.color.secondary };
 }
 
 @media(max-width:767px) {
@@ -246,7 +246,7 @@ section.success {
     height: 100%;
     padding-bottom: 75%;
     opacity: 0;
-    background: rgba({{ site.color.primary-rgb }},.9);
+    background: rgba(${ site.color.primary-rgb },.9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -300,7 +300,7 @@ section.success {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #{{ site.color.primary }};
+    color: #${ site.color.primary };
     background: #fff;
 }
 
@@ -353,7 +353,7 @@ section.success {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #{{ site.color.primary }};
+    color: #${ site.color.primary };
 }
 
 form .row:first-child .floating-label-form-group {
@@ -370,7 +370,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #${ site.color.secondary };
 }
 
 footer .footer-col {
@@ -379,7 +379,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #{{ site.color.secondary-dark }};
+    background-color: #${ site.color.secondary-dark };
 }
 
 .btn-social {
@@ -463,7 +463,7 @@ footer .footer-below {
     width: 1px;
     height: 75px;
     margin-left: 35px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #${ site.color.secondary };
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -473,14 +473,14 @@ footer .footer-below {
     z-index: 1052;
     width: 1px;
     height: 75px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #${ #site.color.secondary };
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
 .navbar-nav>.active>a {
-    background-color: #{{ site.color.secondary-dark }} !important;
+    background-color: #${ site.color.secondary-dark } !important;
 }
 
 /* Fix modal mouse wheel issues */
