--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,16 +7,8 @@
     {% include portfolio_grid.html %}
     {% include about.html %}
     {% include languages.html %}
-    <img style="width: 100%;" src="img/cover-paredes.png">
-
-    {% if site.contact == "static" %}
-      {% include contact_static.html %}
-    {% elsif site.contact == "disqus" %}
-      {% include contact_disqus.html %}
-    {% else %}
-      {% include contact.html %}
-    {% endif %}
-
+    {% include cover_image.html %}
+    {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include analytics.html %}
