--- a/_includes/js.html
+++ b/_includes/js.html
@@ -19,7 +19,5 @@
 <!-- Languaje List JavaScript -->
 <script src="{{ '/js/languages.js' }}"></script>
 
-{% if site.contact == "disqus" %}
-<!-- Disqus Stuff -->
-{% include js_disqus.html %}
-{% endif %}
+<!-- Google Analytics
+<script src="{{ '/js/analytics.js' }}"></script>
