Uncommented Google Analytics javascript file

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -19,5 +19,5 @@
 <!-- Languaje List JavaScript -->
 <script src="{{ '/js/languages.js' }}"></script>
 
-<!-- Google Analytics
+<!-- Google Analytics -->
 <script src="{{ '/js/analytics.js' }}"></script>
