Minor change relatex with container width

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -4,6 +4,10 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+.container {
+  max-width: 940px;
+}
+
 .inner-content{
     margin: 0 0 30px 0;
 }
