--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,12 +6,12 @@
         <h2>About</h2>
         <hr class="star-light">
       </div>
-      <div class="col-lg-10 col-lg-offset-1">
+      <div class="col-lg-12">
         <p>{{ site.about.description }}</p>
       </div>
 
       {% if site.about.work %}
-      <div class="col-lg-10 col-lg-offset-1">
+      <div class="col-lg-12">
         <h3 class="text-center">Work</h3>
         {% for work in site.about.work %}
         <div class="about-section">
@@ -35,7 +35,7 @@
       {% endif %}
 
       {% if site.about.education %}
-      <div class="col-lg-10 col-lg-offset-1">
+      <div class="col-lg-12">
         <h3 class="text-center">Education</h3>
         {% for edu in site.about.education %}
         <div class="about-section">
@@ -59,7 +59,7 @@
       {% endif %}
 
 
-      <div class="col-lg-10 col-lg-offset-1 text-center">
+      <div class="col-lg-12 text-center">
         <a target="_blank" href="{{ site.cv-link }}" class="btn btn-lg btn-outline">
           <i class="fa fa-download"></i> Download my CV
         </a>
