--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,13 +3,7 @@
   <div class="footer-above">
     <div class="container">
       <div class="row">
-        <div class="footer-col col-sm-4">
-          <h3>{{ site.footer.location }}</h3>
-          <p><a target="_blank" href="{{ site.address.url }}">
-            {{ site.address.text }}
-          </a></p>
-        </div>
-        <div class="footer-col col-sm-4">
+        <div class="footer-col col-sm-6">
           <h3>{{ site.footer.social }}</h3>
           <ul class="list-inline">
             {% for network in site.social %}
@@ -20,7 +14,7 @@
             {% endfor %}
           </ul>
         </div>
-        <div class="footer-col col-sm-4">
+        <div class="footer-col col-sm-6 credits">
           <h3>{{ site.footer.credits }}</h3>
           <p>{{ site.credits }}</p>
         </div>
