--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,11 @@
             </li>
             {% endfor %}
           </ul>
+          <div class="col-lg-12 text-center">
+            <a target="_blank" href="mailto:{{ site.email }}" class="btn btn-lg btn-outline">
+              <i class="fa fa-envelope"></i> Contact me
+            </a>
+          </div>
         </div>
       </div>
     </div>
