--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -56,13 +56,13 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Roboto-Medium;
     font-weight: 700;
 }
 
 hr.star-light,
 hr.star-primary {
-    margin: 25px auto 30px;
+    margin: 10px auto 30px;
     padding: 0;
     max-width: 250px;
     border: 0;
@@ -104,7 +104,7 @@ background-color: #fff;
 }
 
 .img-profile {
-    max-height: 40vh;
+    max-height: 30vh;
 }
 
 header {
@@ -127,7 +127,7 @@ header img {
 header .intro-text .name {
     display: block;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Roboto-Medium;
     font-size: 1.5em;
     font-weight: 700;
 }
@@ -144,7 +144,7 @@ header .intro-text .skills {
     }
 
     header .intro-text .name {
-        font-size: 3.75em;
+        font-size: 3em;
     }
 
     header .intro-text .skills {
@@ -179,7 +179,7 @@ header .intro-text .skills {
 
 .navbar {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Roboto-Medium;
     font-weight: 700;
 }
 
@@ -206,7 +206,7 @@ header .intro-text .skills {
 }
 
 section {
-    padding: 100px 0;
+    padding: 50px 0;
 }
 
 section h2 {
@@ -308,6 +308,24 @@ section.success {
     background: #fff;
 }
 
+.btn-outline-content {
+    margin-top: 15px;
+    font-size: 20px;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+    border: solid 2px #{{ site.color.secondary }};
+    color: #{{ site.color.secondary }};
+}
+
+.btn-outline-content:hover,
+.btn-outline-content:focus,
+.btn-outline-content:active,
+.btn-outline-content.active {
+    color: #fff;
+    border: solid 2px #{{ site.color.secondary-dark }};
+    background-color: #{{ site.color.secondary-dark }};
+}
+
 .floating-label-form-group {
     position: relative;
     margin-bottom: 0;
@@ -388,13 +406,13 @@ footer .footer-below {
 
 .btn-social {
     display: inline-block;
-    width: 45px;
-    height: 45px;
+    width: 42px;
+    height: 42px;
     border: 2px solid #fff;
     border-radius: 100%;
     text-align: center;
     font-size: 18px;
-    line-height: 45px;
+    line-height: 36px;
 }
 
 .btn:focus,
@@ -492,4 +510,8 @@ footer .footer-below {
 .modal.fade.in {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
+}
+
+.credits p {
+  font-size: 16px
 }
