Style improvements and updated summary

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,8 +6,8 @@
         <h2>About</h2>
         <hr class="star-primary">
       </div>
-      <div class="col-lg-12">
-        <p>{{ site.about.description }}</p>
+      <div class="col-lg-12 about-description">
+        {{ site.about.description }}
       </div>
 
       {% if site.about.work %}
