--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  max-width: 940px;
+  max-width: 860px;
 }
 
 .inner-content{
@@ -36,7 +36,7 @@ body {
 }
 
 p {
-    font-size: 20px;
+    font-size: 12pt;
 }
 
 p.small {
@@ -161,7 +161,6 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand {
-        opacity: 0;
         font-size: 1.2em;
 
         -webkit-transition: all .3s;
@@ -172,14 +171,16 @@ header .intro-text .skills {
     .navbar-fixed-top.navbar-shrink {
         padding: 0;
     }
+}
 
-    .navbar-fixed-top .navbar-brand {
-        display: none;
-    }
+.navbar-fixed-top .navbar-brand {
+  visibility: hidden;
+  opacity: 0;
+}
 
-    .navbar-fixed-top.navbar-shrink .navbar-brand {
-        display: block;
-    }
+.navbar-fixed-top.navbar-shrink .navbar-brand {
+    visibility: visible;
+    opacity: 1;
 }
 
 .navbar {
@@ -309,7 +310,7 @@ section.success {
 .btn-outline.active {
     border: solid 2px #fff;
     color: #{{ site.color.primary }};
-    background: #fff;
+    background-color: #ffffff;
 }
 
 .btn-outline-content {
@@ -410,13 +411,13 @@ footer .footer-below {
 
 .btn-social {
     display: inline-block;
-    width: 42px;
-    height: 42px;
+    width: 36px;
+    height: 36px;
     border: 2px solid #fff;
     border-radius: 100%;
     text-align: center;
     font-size: 18px;
-    line-height: 36px;
+    line-height: 32px;
 }
 
 .btn:focus,
