--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,5 +1,10 @@
 {% include css/bootstrap.min.css %}
-{% include css/circle.css %}
-{% include css/main.css %}
 {% include css/about.css %}
+{% include css/circle.css %}
+{% include css/footer.css %}
+{% include css/header.css %}
+{% include css/main.css %}
 {% include css/navbar.css %}
+{% include css/portfolio.css %}
+{% include css/portfolio-modal.css %}
+{% include css/section.css %}
