Now jquery is imported from CDN instead of from own server

--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -7,7 +7,7 @@
         <hr class="star-primary">
       </div>
     </div>
-    <div class="row" id="languagest-list">
+    <div class="row" id="languages-list">
       <!-- Generated from JS: ./js/languages.js -->
     </div>
   </div>
