--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
 <!-- jQuery Version 1.11.0 -->
-<script src="{{ '/js/jquery-1.11.0.js' }}"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="{{ '/js/bootstrap.min.js' }}"></script>
