Added social profile metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     {% include portfolio-grid.html %}
     {% include languages.html %}
     {% include footer.html %}
+    {% include social-profile.html %}
     {% include js.html %}
   </body>
 </html>
