Fixed comma bug

--- a/_includes/social-profile.html
+++ b/_includes/social-profile.html
@@ -4,7 +4,7 @@
   "@type": "Person",
   "name": "Sergio García Prado",
   "url": "http://garciparedes.me",
-  "logo": "https://garciparedes.me/assets/img/profile.jpeg"
+  "logo": "https://garciparedes.me/assets/img/profile.jpeg",
   "sameAs": [
     "http://www.facebook.com/garciparedes",
     "http://instagram.com/garciparedes",
