Improved Social Profile

--- a/_includes/social-profile.html
+++ b/_includes/social-profile.html
@@ -3,8 +3,22 @@
   "@context": "http://schema.org",
   "@type": "Person",
   "name": "Sergio García Prado",
+  "email": "mailto:sergio@garciparedes.me",
+  "image": "https://garciparedes.me/assets/img/profile.jpeg",
+  "jobTitle": "Data { Engineer, Scientist }",
+  "birthDate": "1994.08.11",
+  "gender": "male",
+  "nationality": "Spanish",
+  "birthPlace" : {
+    "@type": "Place",
+    "address": {
+  	  "@type": "PostalAddress",
+		    "addressLocality": "Paredes de Nava",
+		    "addressRegion": "Palencia",
+        "addressCountry": "Spain"
+	  }
+  },
   "url": "http://garciparedes.me",
-  "logo": "https://garciparedes.me/assets/img/profile.jpeg",
   "sameAs": [
     "http://www.facebook.com/garciparedes",
     "http://instagram.com/garciparedes",
