--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img alt="{{site.title}}" class="img-profile img-responsive img-circle" src="/assets/img/profile.jpeg" alt="">
+        <div class="img-profile img-responsive img-centered img-circle">
+        </div>
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light">
