Compressed profile image

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -86,7 +86,7 @@ hr.star-primary {
 
 
 .img-profile {
-    background: url(/assets/img/profile.jpeg) no-repeat;
+    background: url(/assets/img/profile.jpg) no-repeat;
     background-position: center center;
     background-size: cover;
     height: 35vh;
