--- a/_includes/social-profile.html
+++ b/_includes/social-profile.html
@@ -4,7 +4,7 @@
   "@type": "Person",
   "name": "Sergio García Prado",
   "email": "mailto:sergio@garciparedes.me",
-  "image": "https://garciparedes.me/assets/img/profile.jpeg",
+  "image": "https://garciparedes.me/assets/img/profile.jpg",
   "jobTitle": "Data { Engineer, Scientist }",
   "birthDate": "1994.08.11",
   "gender": "male",
